--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <title>React App</title>
   </head>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <body style="background-color: #4b6d72;">
+  <body style="background-color: #79a4ab;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
